--- a/frontend-bingo-velez/src/app/modules/settings/pages/settings/settings.component.html
+++ b/frontend-bingo-velez/src/app/modules/settings/pages/settings/settings.component.html
@@ -1,21 +1,39 @@
-<div class="settings-container">
-  <div class="cartones-settings">
-    <form class="carton-quantity-form" [formGroup]="form">
-      <h3>Cantidad de cartones</h3>
-      <div class="input-check-form">
-        <label>21</label>
-        <div class="form-check form-switch">
-          <input
-            class="form-check-input"
-            type="checkbox"
-            role="switch"
-            id="flexSwitchCheckDefault"
-            formControlName="switch"
-            (click)="setCartonesQuantity()"
-          />
-        </div>
-        <label>30</label>
-      </div>
-    </form>
-  </div>
-</div>
+<mat-tab-group>
+
+  <mat-tab label="Cartones">
+    <br><br><br>
+    <mat-card style="width: 90%;">
+      <form [formGroup]="form">
+        <mat-form-field style="width: 90%;" appearance="outline">
+          <mat-label>Numeros de cartones</mat-label>
+          <input formControlName="cartonesNo" matInput placeholder="Placeholder">
+        </mat-form-field>
+      </form>
+
+      <button style="width: 90%;" mat-raised-button color="primary" (click)="updateSettings()">
+        Guardar cambios
+    </button>
+    </mat-card>
+  </mat-tab>
+
+  <mat-tab label="Precio partidas">
+    <br><br><br>
+    <mat-card style="width: 90%;">
+      <form [formGroup]="form2">
+        <mat-form-field style="width: 90%;" appearance="outline">
+          <mat-label>Precios de partidas</mat-label>
+          <input formControlName="priceValue" matInput placeholder="Placeholder">
+        </mat-form-field>
+      </form>
+
+      <button style="width: 90%;" mat-raised-button color="primary" (click)="updatePriceSettings()">
+        Guardar cambios
+    </button>
+    </mat-card>
+  </mat-tab>
+
+  <mat-tab label="Imagenes">
+
+  </mat-tab>
+
+</mat-tab-group>
