--- a/frontend-bingo-velez/src/app/modules/settings/pages/settings/settings.component.html
+++ b/frontend-bingo-velez/src/app/modules/settings/pages/settings/settings.component.html
@@ -2,17 +2,42 @@
 
   <mat-tab label="Cartones">
     <br><br><br>
-    <mat-card style="width: 90%;">
+    <mat-card style="width: 40%;">
       <form [formGroup]="form">
+
         <mat-form-field style="width: 90%;" appearance="outline">
           <mat-label>Numeros de cartones</mat-label>
           <input formControlName="cartonesNo" matInput placeholder="Placeholder">
         </mat-form-field>
       </form>
 
-      <button style="width: 90%;" mat-raised-button color="primary" (click)="updateSettings()">
+      <button style="width: 90%;" mat-raised-button color="primary" (click)="updateSettings('cardboard')">
         Guardar cambios
-    </button>
+      </button>
+    </mat-card>
+
+    <br><br>
+    <mat-card style="width: 40%;">
+      <form [formGroup]="cartonesSpecials">
+
+        <mat-form-field style="width: 90%;" appearance="outline">
+          <mat-select formControlName="option" placeholder="Cartones especiales" (selectionChange)="changeSettingSelection()">
+            <mat-option *ngFor="let setting of settings" [value]="setting.id" >
+              {{ setting.name }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+
+        <mat-form-field [hidden]="!canShowValueField" style="width: 90%;" appearance="outline">
+          <mat-label>Valor del carton</mat-label>
+          <input formControlName="value" matInput placeholder="Placeholder">
+        </mat-form-field>
+
+      </form>
+
+      <button style="width: 90%;" mat-raised-button color="primary" (click)="updateSettings('specialCardboard')">
+        Guardar cambios
+      </button>
     </mat-card>
   </mat-tab>
 
@@ -26,14 +51,14 @@
         </mat-form-field>
       </form>
 
-      <button style="width: 90%;" mat-raised-button color="primary" (click)="updatePriceSettings()">
+      <button style="width: 90%;" mat-raised-button color="primary" (click)="updateSettings('price')">
         Guardar cambios
-    </button>
+      </button>
     </mat-card>
   </mat-tab>
 
   <mat-tab label="Imagenes">
-
+    <img [src]="image">
   </mat-tab>
 
 </mat-tab-group>
