Determinando y asignando los colores segun las jugadas

--- a/frontend-bingo-velez/src/app/modules/home/pages/home/home.component.scss
+++ b/frontend-bingo-velez/src/app/modules/home/pages/home/home.component.scss
@@ -123,6 +123,41 @@
                   position: absolute;
                   border-radius: 50%;
                 }
+                .circle-sumita{
+                  width: 20px;
+                  height: 20px;
+                  background-color: green;
+                  position: absolute;
+                  border-radius: 50%;
+                }
+                .circle-t{
+                  width: 20px;
+                  height: 20px;
+                  background-color: violet;
+                  position: absolute;
+                  border-radius: 50%;
+                }
+                .circle-bingo{
+                  width: 20px;
+                  height: 20px;
+                  background-color: yellow;
+                  position: absolute;
+                  border-radius: 50%;
+                }
+                .circle-x{
+                  width: 20px;
+                  height: 20px;
+                  background-color: orange;
+                  position: absolute;
+                  border-radius: 50%;
+                }
+                .circle-l{
+                  width: 20px;
+                  height: 20px;
+                  background-color: blue;
+                  position: absolute;
+                  border-radius: 50%;
+                }
               }
               .td-color {
                 background-color: #ddd !important;
