--- a/frontend-bingo-velez/src/app/modules/home/pages/home/home.component.html
+++ b/frontend-bingo-velez/src/app/modules/home/pages/home/home.component.html
@@ -1,240 +1,192 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bingo Velez</title>
-  </head>
-  <body>
-    <main class="main-container">
-      <div class="generate-random-number">
-        <button
-          class="random-number-generator"
-          (click)="setColorToCellNumber()"
-        >
-          <p *ngIf="randomNumber == 0">Generar número</p>
-          <p *ngIf="randomNumber > 0">{{ randomNumber }}</p>
-        </button>
-        <div class="last-5-plays">
-          <p>{{ numbers[0] }}</p>
-          <p>{{ numbers[1] }}</p>
-          <p>{{ numbers[2] }}</p>
-          <p>{{ numbers[3] }}</p>
-          <p>{{ numbers[4] }}</p>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bingo Velez</title>
+</head>
+
+<body>
+  <main class="main-container">
+    <div class="generate-random-number">
+      <button class="random-number-generator" (click)="setColorToCellNumber()">
+        <p *ngIf="randomNumber == 0">Generar número</p>
+        <p *ngIf="randomNumber > 0">{{ randomNumber }}</p>
+      </button>
+      <div class="last-5-plays">
+        <p>{{ numbers[0] }}</p>
+        <p>{{ numbers[1] }}</p>
+        <p>{{ numbers[2] }}</p>
+        <p>{{ numbers[3] }}</p>
+        <p>{{ numbers[4] }}</p>
+      </div>
+    </div>
+    <section class="cards">
+      <div class="card-cardboard" *ngFor="let item of items">
+        <div class="top-content">
+          <select type="text" class="input-name">
+            <option [value]="">Jugadores</option>
+            <option [value]="player.id" *ngFor="let player of players">
+              {{ player.name }}
+            </option>
+          </select>
+          <button class="refresh-button" (click)="resetCarton(item)">
+            <img src="../../../../assets/img/logos/refresh.svg" alt="" />
+          </button>
+        </div>
+        <div class="cuadriculas">
+          <table class="table-cardboard">
+            <thead>
+              <tr class="t-head">
+                <th>{{ item.title.B }}</th>
+                <th>{{ item.title.I }}</th>
+                <th>{{ item.title.N }}</th>
+                <th>{{ item.title.G }}</th>
+                <th>{{ item.title.O }}</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr class="t-body">
+                <td>
+                  {{ item.row1[0].number }}
+                  <span [ngClass]="item.row1[0].class === '' ? 'circle-cover' : item.row1[0].class"
+                    *ngIf="item.row1[0].selected"></span>
+                </td>
+                <td>
+                  {{ item.row2[0].number }}
+                  <span [ngClass]="item.row2[0].class === '' ? 'circle-cover' : item.row2[0].class"
+                    *ngIf="item.row2[0].selected"></span>
+                </td>
+                <td>
+                  {{ item.row3[0].number }}
+                  <span [ngClass]="item.row3[0].class === '' ? 'circle-cover' : item.row3[0].class"
+                    *ngIf="item.row3[0].selected"></span>
+                </td>
+                <td>
+                  {{ item.row4[0].number }}
+                  <span [ngClass]="item.row4[0].class === '' ? 'circle-cover' : item.row4[0].class"
+                    *ngIf="item.row4[0].selected"></span>
+                </td>
+                <td>
+                  {{ item.row5[0].number }}
+                  <span [ngClass]="item.row5[0].class === '' ? 'circle-cover' : item.row5[0].class"
+                    *ngIf="item.row5[0].selected"></span>
+                </td>
+              </tr>
+              <tr class="t-body">
+                <td>
+                  {{ item.row1[1].number }}
+                  <span [ngClass]="item.row1[1].class === '' ? 'circle-cover' : item.row1[1].class"
+                    *ngIf="item.row1[1].selected"></span>
+                </td>
+                <td>
+                  {{ item.row2[1].number }}
+                  <span [ngClass]="item.row2[1].class === '' ? 'circle-cover': item.row2[1].class"
+                    *ngIf="item.row2[1].selected"></span>
+                </td>
+                <td>
+                  {{ item.row3[1].number }}
+                  <span [ngClass]="item.row3[1].class === '' ? 'circle-cover': item.row3[1].class"
+                    *ngIf="item.row3[1].selected"></span>
+                </td>
+                <td>
+                  {{ item.row4[1].number }}
+                  <span [ngClass]="item.row4[1].class === '' ? 'circle-cover': item.row4[1].class"
+                    *ngIf="item.row4[1].selected"></span>
+                </td>
+                <td>
+                  {{ item.row5[1].number }}
+                  <span [ngClass]="item.row5[1].class === '' ? 'circle-cover': item.row5[1].class"
+                    *ngIf="item.row5[1].selected"></span>
+                </td>
+              </tr>
+              <tr class="t-body middle-row">
+                <td>
+                  {{ item.row1[2].number }}
+                  <span [ngClass]="item.row1[2].class === '' ? 'circle-cover': item.row1[2].class"
+                    *ngIf="item.row1[2].selected"></span>
+                </td>
+                <td>
+                  {{ item.row2[2].number }}
+                  <span [ngClass]="item.row2[2].class === '' ? 'circle-cover': item.row2[2].class"
+                    *ngIf="item.row2[2].selected"></span>
+                </td>
+                <td [ngClass]="{ 'td-color': item.row3[2].selected }">
+                  <img [src]="item.row3[2].image" />
+                </td>
+                <td>
+                  {{ item.row4[2].number }}
+                  <span [ngClass]="item.row4[2].class === '' ? 'circle-cover': item.row4[2].class"
+                    *ngIf="item.row4[2].selected"></span>
+                </td>
+                <td>
+                  {{ item.row5[2].number }}
+                  <span [ngClass]="item.row5[2].class === '' ? 'circle-cover': item.row5[2].class"
+                    *ngIf="item.row5[2].selected"></span>
+                </td>
+              </tr>
+              <tr class="t-body">
+                <td>
+                  {{ item.row1[3].number }}
+                  <span [ngClass]="item.row1[3].class === '' ? 'circle-cover': item.row1[3].class"
+                    *ngIf="item.row1[3].selected"></span>
+                </td>
+                <td>
+                  {{ item.row2[3].number }}
+                  <span [ngClass]="item.row2[3].class === '' ? 'circle-cover': item.row2[3].class"
+                    *ngIf="item.row2[3].selected"></span>
+                </td>
+                <td>
+                  {{ item.row3[3].number }}
+                  <span [ngClass]="item.row3[3].class === '' ? 'circle-cover': item.row3[3].class"
+                    *ngIf="item.row3[3].selected"></span>
+                </td>
+                <td>
+                  {{ item.row4[3].number }}
+                  <span [ngClass]="item.row4[3].class === '' ? 'circle-cover': item.row4[3].class"
+                    *ngIf="item.row4[3].selected"></span>
+                </td>
+                <td>
+                  {{ item.row5[3].number }}
+                  <span [ngClass]="item.row5[3].class === '' ? 'circle-cover': item.row5[3].class"
+                    *ngIf="item.row5[3].selected"></span>
+                </td>
+              </tr>
+              <tr class="t-body last-row">
+                <td>
+                  {{ item.row1[4].number }}
+                  <span [ngClass]="item.row1[4].class === '' ? 'circle-cover': item.row1[4].class"
+                    *ngIf="item.row1[4].selected"></span>
+                </td>
+                <td>
+                  {{ item.row2[4].number }}
+                  <span [ngClass]="item.row2[4].class === '' ? 'circle-cover': item.row2[4].class"
+                    *ngIf="item.row2[4].selected"></span>
+                </td>
+                <td>
+                  {{ item.row3[4].number }}
+                  <span [ngClass]="item.row3[4].class === '' ? 'circle-cover': item.row3[4].class"
+                    *ngIf="item.row3[4].selected"></span>
+                </td>
+                <td>
+                  {{ item.row4[4].number }}
+                  <span [ngClass]="item.row4[4].class === '' ? 'circle-cover': item.row4[4].class"
+                    *ngIf="item.row4[4].selected"></span>
+                </td>
+                <td>
+                  {{ item.row5[4].number }}
+                  <span [ngClass]="item.row5[4].class === '' ? 'circle-cover': item.row5[4].class"
+                    *ngIf="item.row5[4].selected"></span>
+                </td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
-      <section class="cards">
-        <div class="card-cardboard" *ngFor="let item of items">
-          <div class="top-content">
-            <select type="text" class="input-name">
-              <option [value]="">Jugadores</option>
-              <option [value]="player.id" *ngFor="let player of players">
-                {{ player.name }}
-              </option>
-            </select>
-            <button class="refresh-button" (click)="resetCarton(item)">
-              <img src="../../../../assets/img/logos/refresh.svg" alt="" />
-            </button>
-          </div>
-          <div class="cuadriculas">
-            <table class="table-cardboard">
-              <thead>
-                <tr class="t-head">
-                  <th>{{ item.title.B }}</th>
-                  <th>{{ item.title.I }}</th>
-                  <th>{{ item.title.N }}</th>
-                  <th>{{ item.title.G }}</th>
-                  <th>{{ item.title.O }}</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr class="t-body">
-                  <td>
-                    {{ item.row1[0].number }}
-                    <span
-                      class="circle-cover"
-                      *ngIf="item.row1[0].selected"
-                    ></span>
-                  </td>
-                  <td>
-                    {{ item.row2[0].number }}
-                    <span
-                      class="circle-cover"
-                      *ngIf="item.row2[0].selected"
-                    ></span>
-                  </td>
-                  <td>
-                    {{ item.row3[0].number }}
-                    <span
-                      class="circle-cover"
-                      *ngIf="item.row3[0].selected"
-                    ></span>
-                  </td>
-                  <td>
-                    {{ item.row4[0].number }}
-                    <span
-                      class="circle-cover"
-                      *ngIf="item.row4[0].selected"
-                    ></span>
-                  </td>
-                  <td>
-                    {{ item.row5[0].number }}
-                    <span
-                      class="circle-cover"
-                      *ngIf="item.row5[0].selected"
-                    ></span>
-                  </td>
-                </tr>
-                <tr class="t-body">
-                  <td>
-                    {{ item.row1[1].number }}
-                    <span
-                      class="circle-cover"
-                      *ngIf="item.row1[1].selected"
-                    ></span>
-                  </td>
-                  <td>
-                    {{ item.row2[1].number }}
-                    <span
-                      class="circle-cover"
-                      *ngIf="item.row2[1].selected"
-                    ></span>
-                  </td>
-                  <td>
-                    {{ item.row3[1].number }}
-                    <span
-                      class="circle-cover"
-                      *ngIf="item.row3[1].selected"
-                    ></span>
-                  </td>
-                  <td>
-                    {{ item.row4[1].number }}
-                    <span
-                      class="circle-cover"
-                      *ngIf="item.row4[1].selected"
-                    ></span>
-                  </td>
-                  <td>
-                    {{ item.row5[1].number }}
-                    <span
-                      class="circle-cover"
-                      *ngIf="item.row5[1].selected"
-                    ></span>
-                  </td>
-                </tr>
-                <tr class="t-body middle-row">
-                  <td>
-                    {{ item.row1[2].number }}
-                    <span
-                      class="circle-cover"
-                      *ngIf="item.row1[2].selected"
-                    ></span>
-                  </td>
-                  <td>
-                    {{ item.row2[2].number }}
-                    <span
-                      class="circle-cover"
-                      *ngIf="item.row2[2].selected"
-                    ></span>
-                  </td>
-                  <td [ngClass]="{ 'td-color': item.row3[2].selected }">
-                    <img [src]="item.row3[2].image" />
-                  </td>
-                  <td>
-                    {{ item.row4[2].number }}
-                    <span
-                      class="circle-cover"
-                      *ngIf="item.row4[2].selected"
-                    ></span>
-                  </td>
-                  <td>
-                    {{ item.row5[2].number }}
-                    <span
-                      class="circle-cover"
-                      *ngIf="item.row5[2].selected"
-                    ></span>
-                  </td>
-                </tr>
-                <tr class="t-body">
-                  <td>
-                    {{ item.row1[3].number }}
-                    <span
-                      class="circle-cover"
-                      *ngIf="item.row1[3].selected"
-                    ></span>
-                  </td>
-                  <td>
-                    {{ item.row2[3].number }}
-                    <span
-                      class="circle-cover"
-                      *ngIf="item.row2[3].selected"
-                    ></span>
-                  </td>
-                  <td>
-                    {{ item.row3[3].number }}
-                    <span
-                      class="circle-cover"
-                      *ngIf="item.row3[3].selected"
-                    ></span>
-                  </td>
-                  <td>
-                    {{ item.row4[3].number }}
-                    <span
-                      class="circle-cover"
-                      *ngIf="item.row4[3].selected"
-                    ></span>
-                  </td>
-                  <td>
-                    {{ item.row5[3].number }}
-                    <span
-                      class="circle-cover"
-                      *ngIf="item.row5[3].selected"
-                    ></span>
-                  </td>
-                </tr>
-                <tr class="t-body last-row">
-                  <td>
-                    {{ item.row1[4].number }}
-                    <span
-                      class="circle-cover"
-                      *ngIf="item.row1[4].selected"
-                    ></span>
-                  </td>
-                  <td>
-                    {{ item.row2[4].number }}
-                    <span
-                      class="circle-cover"
-                      *ngIf="item.row2[4].selected"
-                    ></span>
-                  </td>
-                  <td>
-                    {{ item.row3[4].number }}
-                    <span
-                      class="circle-cover"
-                      *ngIf="item.row3[4].selected"
-                    ></span>
-                  </td>
-                  <td>
-                    {{ item.row4[4].number }}
-                    <span
-                      class="circle-cover"
-                      *ngIf="item.row4[4].selected"
-                    ></span>
-                  </td>
-                  <td>
-                    {{ item.row5[4].number }}
-                    <span
-                      class="circle-cover"
-                      *ngIf="item.row5[4].selected"
-                    ></span>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-      </section>
-    </main>
-  </body>
+    </section>
+  </main>
+</body>
+
 </html>
