commit con logica de ganadores segun jugada - falata validar bien el proceso

--- a/frontend-bingo-velez/src/app/core/components/view-winner-details/view-winner-details.component.html
+++ b/frontend-bingo-velez/src/app/core/components/view-winner-details/view-winner-details.component.html
@@ -25,7 +25,7 @@
                 <tr>
                     <th scope="col">Nombre ganador</th>
                     <th scope="col">Nombre jugada</th>
-                    <th scope="col">Monto jugada</th>
+                    <th scope="col">Monto ganado</th>
                     <th scope="col">Fecha</th>
                 </tr>
             </thead>
