--- a/frontend-bingo-velez/src/assets/css/style.css
+++ b/frontend-bingo-velez/src/assets/css/style.css
@@ -9193,8 +9193,12 @@ Main sidebar
 sidebar navigation
 ******************/
 .scroll-sidebar {
-  height: calc(100% - 20px);
-  position: relative; }
+  /* height: calc(100% - 20px);
+  position: relative;  */
+  height: 100%;
+  position: relative;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 0px 5px;
+}
 
 .sidebar-nav ul {
   /*******************
