--- a/frontend-bingo-velez/src/assets/scss/core/sidebar/sidebar.scss
+++ b/frontend-bingo-velez/src/assets/scss/core/sidebar/sidebar.scss
@@ -25,8 +25,10 @@ Main sidebar
 sidebar navigation
 ******************/
 .scroll-sidebar {
-    height: calc(100% - 20px);
+    // height: calc(100% - 20px);
+    height: 100%;
     position: relative;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 0px 5px;
 }
 
 .sidebar-nav {
