--- a/frontend-bingo-velez/src/app/core/components/sidenav/sidenav.component.html
+++ b/frontend-bingo-velez/src/app/core/components/sidenav/sidenav.component.html
@@ -47,7 +47,7 @@
         </li>
       </ul>
 
-      <div style="margin-top: 200px; text-align: center;" class="cartones-quantity">
+      <!-- <div style="margin-top: 200px; text-align: center;" class="cartones-quantity">
         <h3>Precio de partida</h3>
 
         <mat-radio-group class="example-radio-group" [(ngModel)]="priceSelected">
@@ -55,7 +55,7 @@
             {{price | currency}}
           </mat-radio-button>
         </mat-radio-group>
-      </div>
+      </div> -->
     </nav>
     <!-- End Sidebar navigation -->
   </div>
