--- a/frontend-bingo-velez/src/app/modules/home/pages/home/home.component.html
+++ b/frontend-bingo-velez/src/app/modules/home/pages/home/home.component.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <main class="main-container">
-      <div class="generate-random-number">
+      <!-- <div class="generate-random-number">
         <button
           class="random-number-generator"
           (click)="setColorToCellNumber()"
@@ -16,17 +16,144 @@
           <p *ngIf="randomNumber == 0">Generar número</p>
           <p *ngIf="randomNumber > 0">{{ randomNumber }}</p>
         </button>
-        <div class="last-5-plays">
-          <p>{{ numbers[0] }}</p>
-          <p>{{ numbers[1] }}</p>
-          <p>{{ numbers[2] }}</p>
-          <p>{{ numbers[3] }}</p>
-          <p>{{ numbers[4] }}</p>
-        </div>
+      </div> -->
+      <div class="last-5-plays">
+        <p>{{ numbers[0] }}</p>
+        <p>{{ numbers[1] }}</p>
+        <p>{{ numbers[2] }}</p>
+        <p>{{ numbers[3] }}</p>
+        <p>{{ numbers[4] }}</p>
       </div>
+
+      <section class="single-card float">
+        <div class="card-cardboard" *ngFor="let generic of genericTable">
+          <div class="cuadriculas">
+            <table class="table-cardboard">
+              <thead>
+                <tr class="t-head">
+                  <th>{{ generic.title.B }}</th>
+                  <th>{{ generic.title.I }}</th>
+                  <th>{{ generic.title.N }}</th>
+                  <th>{{ generic.title.G }}</th>
+                  <th>{{ generic.title.O }}</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr class="t-body">
+                  <td (click)="getSelectedNumber(generic.row1[0].uno)">{{ generic.row1[0].uno }}</td>
+                  <td (click)="getSelectedNumber(generic.row2[0].diezyseis)">{{ generic.row2[0].diezyseis }}</td>
+                  <td (click)="getSelectedNumber(generic.row3[0].treintiuno)">{{ generic.row3[0].treintiuno }}</td>
+                  <td (click)="getSelectedNumber(generic.row4[0].cuarentayseis)">{{ generic.row4[0].cuarentayseis }}</td>
+                  <td (click)="getSelectedNumber(generic.row5[0].sesentayuno)">{{ generic.row5[0].sesentayuno }}</td>
+                </tr>
+                <tr class="t-body">
+                  <td (click)="getSelectedNumber(generic.row1[0].dos)">{{ generic.row1[0].dos }}</td>
+                  <td (click)="getSelectedNumber(generic.row2[0].diesisiete)">{{ generic.row2[0].diesisiete }}</td>
+                  <td (click)="getSelectedNumber(generic.row3[0].treintidos)">{{ generic.row3[0].treintidos }}</td>
+                  <td (click)="getSelectedNumber(generic.row4[0].cuarentaysiete)">{{ generic.row4[0].cuarentaysiete }}</td>
+                  <td (click)="getSelectedNumber(generic.row5[0].sesentaydos)">{{ generic.row5[0].sesentaydos }}</td>
+                </tr>
+                <tr class="t-body">
+                  <td (click)="getSelectedNumber(generic.row1[0].tres)">{{ generic.row1[0].tres }}</td>
+                  <td (click)="getSelectedNumber(generic.row2[0].diezyocho)">{{ generic.row2[0].diezyocho }}</td>
+                  <td (click)="getSelectedNumber(generic.row3[0].treintitres)">{{ generic.row3[0].treintitres }}</td>
+                  <td (click)="getSelectedNumber(generic.row4[0].cuarentayocho)">{{ generic.row4[0].cuarentayocho }}</td>
+                  <td (click)="getSelectedNumber(generic.row5[0].sesentaytres)">{{ generic.row5[0].sesentaytres }}</td>
+                </tr>
+                <tr class="t-body">
+                  <td (click)="getSelectedNumber(generic.row1[0].cuatro)">{{ generic.row1[0].cuatro }}</td>
+                  <td (click)="getSelectedNumber(generic.row2[0].diezynueve)">{{ generic.row2[0].diezynueve }}</td>
+                  <td (click)="getSelectedNumber(generic.row3[0].treinticuatro)">{{ generic.row3[0].treinticuatro }}</td>
+                  <td (click)="getSelectedNumber(generic.row4[0].cuarentaynueve)">{{ generic.row4[0].cuarentaynueve }}</td>
+                  <td (click)="getSelectedNumber(generic.row5[0].sesentaycuatro)">{{ generic.row5[0].sesentaycuatro }}</td>
+                </tr>
+                <tr class="t-body">
+                  <td (click)="getSelectedNumber(generic.row1[0].cinco)">{{ generic.row1[0].cinco }}</td>
+                  <td (click)="getSelectedNumber(generic.row2[0].veinte)">{{ generic.row2[0].veinte }}</td>
+                  <td (click)="getSelectedNumber(generic.row3[0].treinticinco)">{{ generic.row3[0].treinticinco }}</td>
+                  <td (click)="getSelectedNumber(generic.row4[0].cincuenta)">{{ generic.row4[0].cincuenta }}</td>
+                  <td (click)="getSelectedNumber(generic.row5[0].sesentaycinco)">{{ generic.row5[0].sesentaycinco }}</td>
+                </tr>
+                <tr class="t-body">
+                  <td (click)="getSelectedNumber(generic.row1[0].seis)">{{ generic.row1[0].seis }}</td>
+                  <td (click)="getSelectedNumber(generic.row2[0].veintiuno)">{{ generic.row2[0].veintiuno }}</td>
+                  <td (click)="getSelectedNumber(generic.row3[0].treintiseis)">{{ generic.row3[0].treintiseis }}</td>
+                  <td (click)="getSelectedNumber(generic.row4[0].cincuentayuno)">{{ generic.row4[0].cincuentayuno }}</td>
+                  <td (click)="getSelectedNumber(generic.row5[0].sesentayseis)">{{ generic.row5[0].sesentayseis }}</td>
+                </tr>
+                <tr class="t-body">
+                  <td (click)="getSelectedNumber(generic.row1[0].siete)">{{ generic.row1[0].siete }}</td>
+                  <td (click)="getSelectedNumber(generic.row2[0].veintidos)">{{ generic.row2[0].veintidos }}</td>
+                  <td (click)="getSelectedNumber(generic.row3[0].treintisiete)">{{ generic.row3[0].treintisiete }}</td>
+                  <td (click)="getSelectedNumber(generic.row4[0].cincuentaydos)">{{ generic.row4[0].cincuentaydos }}</td>
+                  <td (click)="getSelectedNumber(generic.row5[0].sesentaysiete)">{{ generic.row5[0].sesentaysiete }}</td>
+                </tr>
+                <tr class="t-body">
+                  <td (click)="getSelectedNumber(generic.row1[0].ocho)">{{ generic.row1[0].ocho }}</td>
+                  <td (click)="getSelectedNumber(generic.row2[0].veintitres)">{{ generic.row2[0].veintitres }}</td>
+                  <td (click)="getSelectedNumber(generic.row3[0].treintiocho)">{{ generic.row3[0].treintiocho }}</td>
+                  <td (click)="getSelectedNumber(generic.row4[0].cincuentaytres)">{{ generic.row4[0].cincuentaytres }}</td>
+                  <td (click)="getSelectedNumber(generic.row5[0].sesentayocho)">{{ generic.row5[0].sesentayocho }}</td>
+                </tr>
+                <tr class="t-body">
+                  <td (click)="getSelectedNumber(generic.row1[0].nueve)">{{ generic.row1[0].nueve }}</td>
+                  <td (click)="getSelectedNumber(generic.row2[0].veinticuatro)">{{ generic.row2[0].veinticuatro }}</td>
+                  <td (click)="getSelectedNumber(generic.row3[0].treintinueve)">{{ generic.row3[0].treintinueve }}</td>
+                  <td (click)="getSelectedNumber(generic.row4[0].cincuentaycuatro)">{{ generic.row4[0].cincuentaycuatro }}</td>
+                  <td (click)="getSelectedNumber(generic.row5[0].sesentaynueve)">{{ generic.row5[0].sesentaynueve }}</td>
+                </tr>
+                <tr class="t-body">
+                  <td (click)="getSelectedNumber(generic.row1[0].diez)">{{ generic.row1[0].diez }}</td>
+                  <td (click)="getSelectedNumber(generic.row2[0].veinticinco)">{{ generic.row2[0].veinticinco }}</td>
+                  <td (click)="getSelectedNumber(generic.row3[0].cuarenta)">{{ generic.row3[0].cuarenta }}</td>
+                  <td (click)="getSelectedNumber(generic.row4[0].cincuentaycinco)">{{ generic.row4[0].cincuentaycinco }}</td>
+                  <td (click)="getSelectedNumber(generic.row5[0].setenta)">{{ generic.row5[0].setenta }}</td>
+                </tr>
+                <tr class="t-body">
+                  <td (click)="getSelectedNumber(generic.row1[0].once)">{{ generic.row1[0].once }}</td>
+                  <td (click)="getSelectedNumber(generic.row2[0].veintiseis)">{{ generic.row2[0].veintiseis }}</td>
+                  <td (click)="getSelectedNumber(generic.row3[0].cuarentayuno)">{{ generic.row3[0].cuarentayuno }}</td>
+                  <td (click)="getSelectedNumber(generic.row4[0].cincuentayseis)">{{ generic.row4[0].cincuentayseis }}</td>
+                  <td (click)="getSelectedNumber(generic.row5[0].setentayuno)">{{ generic.row5[0].setentayuno }}</td>
+                </tr>
+                <tr class="t-body">
+                  <td (click)="getSelectedNumber(generic.row1[0].doce)">{{ generic.row1[0].doce }}</td>
+                  <td (click)="getSelectedNumber(generic.row2[0].veintisiete)">{{ generic.row2[0].veintisiete }}</td>
+                  <td (click)="getSelectedNumber(generic.row3[0].cuarentaydos)">{{ generic.row3[0].cuarentaydos }}</td>
+                  <td (click)="getSelectedNumber(generic.row4[0].cincuentaysiete)">{{ generic.row4[0].cincuentaysiete }}</td>
+                  <td (click)="getSelectedNumber(generic.row5[0].setentaydos)">{{ generic.row5[0].setentaydos }}</td>
+                </tr>
+                <tr class="t-body">
+                  <td (click)="getSelectedNumber(generic.row1[0].trece)">{{ generic.row1[0].trece }}</td>
+                  <td (click)="getSelectedNumber(generic.row2[0].veintiocho)">{{ generic.row2[0].veintiocho }}</td>
+                  <td (click)="getSelectedNumber(generic.row3[0].cuarentaytres)">{{ generic.row3[0].cuarentaytres }}</td>
+                  <td (click)="getSelectedNumber(generic.row4[0].cincuentayocho)">{{ generic.row4[0].cincuentayocho }}</td>
+                  <td (click)="getSelectedNumber(generic.row5[0].setentaytres)">{{ generic.row5[0].setentaytres }}</td>
+                </tr>
+                <tr class="t-body">
+                  <td (click)="getSelectedNumber(generic.row1[0].catorce)">{{ generic.row1[0].catorce }}</td>
+                  <td (click)="getSelectedNumber(generic.row2[0].veintinueve)">{{ generic.row2[0].veintinueve }}</td>
+                  <td (click)="getSelectedNumber(generic.row3[0].cuarentaycuatro)">{{ generic.row3[0].cuarentaycuatro }}</td>
+                  <td (click)="getSelectedNumber(generic.row4[0].cincuentaynueve)">{{ generic.row4[0].cincuentaynueve }}</td>
+                  <td (click)="getSelectedNumber(generic.row5[0].setentaycuatro)">{{ generic.row5[0].setentaycuatro }}</td>
+                </tr>
+                <tr class="t-body last-row">
+                  <td (click)="getSelectedNumber(generic.row1[0].quince)">{{ generic.row1[0].quince }}</td>
+                  <td (click)="getSelectedNumber(generic.row2[0].treinta)">{{ generic.row2[0].treinta }}</td>
+                  <td (click)="getSelectedNumber(generic.row3[0].cuarentaycinco)">{{ generic.row3[0].cuarentaycinco }}</td>
+                  <td (click)="getSelectedNumber(generic.row4[0].sesenta)">{{ generic.row4[0].sesenta }}</td>
+                  <td (click)="getSelectedNumber(generic.row5[0].setentaycinco)">{{ generic.row5[0].setentaycinco }}</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </section>
+
       <section class="cards">
         <div class="card-cardboard" *ngFor="let item of items">
           <div class="top-content">
+            <p class="carton-number">{{ item.index + 1 }}</p>
             <select type="text" class="input-name">
               <option [value]="">Jugadores</option>
               <option [value]="player.id" *ngFor="let player of players">
@@ -145,7 +272,7 @@
                     {{ item.row4[2].number }}
                     <span
                       class="circle-cover"
-                      *ngIf="item.row5[2].selected"
+                      *ngIf="item.row4[2].selected"
                     ></span>
                   </td>
                   <td>
