--- a/frontend-bingo-velez/src/app/modules/home/pages/home/home.component.scss
+++ b/frontend-bingo-velez/src/app/modules/home/pages/home/home.component.scss
@@ -1,5 +1,28 @@
+body {
+  position: relative;
+}
+.float {
+  position: fixed;
+  left: 15px;
+  z-index: 9999;
+  bottom: 125px;
+  .card-cardboard {
+    .cuadriculas {
+      .table-cardboard {
+        tbody {
+          tr {
+            td {
+              cursor: pointer;
+            }
+          }
+        }
+      }
+    }
+  }
+}
 .main-container {
   padding: 15px 0;
+  position: relative;
   //   border: 3px solid #000;
   margin: 0 10px;
   border-radius: 15px;
@@ -10,14 +33,15 @@
     align-items: center;
     justify-content: center;
     position: fixed;
-    left: 36px;
-    bottom: 77px;
+    left: 68px;
+    bottom: 21px;
     z-index: 9999;
     margin: 20px 0;
     button {
       border-radius: 50%;
       padding: 20px;
       height: 100px;
+      border-bottom: 0px;
       width: 100px;
       border: 1px solid #3f51b5;
       background-color: transparent;
@@ -27,38 +51,54 @@
         margin: 0;
       }
     }
-
-    .last-5-plays {
+  }
+  .last-5-plays {
+    justify-content: center;
+    display: flex;
+    position: fixed;
+    gap: 10px;
+    z-index: 999;
+    left: 0;
+    right: 0;
+    bottom: 13px;
+    p {
+      border: 3px solid #3f51b5;
+      height: 30px;
+      width: 30px;
+      padding: 18px;
+      font-weight: bold;
+      color: #000;
+      text-align: center;
       display: flex;
-      gap: 10px;
-      p {
-        border: 1px solid #3f51b5;
-        height: 25px;
-        text-align: center;
-        display: flex;
-        border-radius: 50%;
-        margin: 0;
-        width: 25px;
-        justify-content: center;
-        align-items: center;
-      }
+      border-radius: 50%;
+      margin: 0;
+      justify-content: center;
+      align-items: center;
     }
   }
-  .cards {
+  .cards,
+  .single-card {
     display: flex;
     justify-content: flex-start;
     flex-wrap: wrap;
     gap: 25px;
     .card-cardboard {
+      position: relative;
       width: 210px;
       border: 2px solid #3f51b5;
       padding: 5px;
       border-radius: 10px;
       .top-content {
-        padding: 12px 5px;
+        padding: 0 0 12px 0px;
         display: flex;
-        justify-content: space-between;
+        justify-content: flex-end;
+        gap: 10px;
         align-items: center;
+        .carton-number {
+          font-size: 1rem;
+          margin: 0;
+          font-weight: bold;
+        }
         .input-name {
           height: 25px;
           width: 70%;
@@ -67,11 +107,14 @@
           font-size: 18px;
         }
         .refresh-button {
-          width: 40px;
+          width: 24px;
           height: 30px;
           background-color: transparent;
           border: none;
           cursor: pointer;
+          padding: 0;
+          bottom: -17px;
+          right: -26px;
           img {
             width: 100%;
             height: 100%;
@@ -89,7 +132,7 @@
               display: flex;
               justify-content: center;
               th {
-                border: 1px solid #000;
+                border: 1px dotted #000;
                 width: 45px;
                 height: 25px;
                 display: flex;
@@ -109,9 +152,10 @@
               display: flex;
               justify-content: center;
               td {
-                border: 1px solid #000;
+                border: 1px dotted #000;
                 border-top: none;
                 width: 45px;
+                color: #000;
                 height: 25px;
                 display: flex;
                 justify-content: center;
