--- a/frontend-bingo-velez/src/app/modules/modules.component.html
+++ b/frontend-bingo-velez/src/app/modules/modules.component.html
@@ -3,5 +3,6 @@
     <app-navbar></app-navbar>
     <div class="global-wrapper">
       <router-outlet></router-outlet>
+      <app-footer style="position: absolute; bottom: 0; width: 100%;"></app-footer>
     </div>
   </div>
