--- a/frontend-bingo-velez/src/styles.scss
+++ b/frontend-bingo-velez/src/styles.scss
@@ -1,9 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
 .global-wrapper {
-    margin-left: 260px;
-    margin-top: 10px;
-  }
+  margin-left: 260px;
+  margin-top: 10px;
+}
+.cartones-quantity {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
