--- a/frontend-bingo-velez/src/app/modules/home/pages/home/home.component.html
+++ b/frontend-bingo-velez/src/app/modules/home/pages/home/home.component.html
@@ -18,6 +18,7 @@
 
       <div class="erase-all-button float">
         <button (click)="EraseAll()">Borrar todo</button>
+        <button (click)="getPartidas()">Cargar partidas</button>
       </div>
 
       <section class="single-card float">
